Bug 446686 - Gamut Mask Description Metadata is notupdated upon overwrite.
Summary: Gamut Mask Description Metadata is notupdated upon overwrite.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-08 15:35 UTC by wolthera
Modified: 2021-12-17 13:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2021-12-08 15:35:12 UTC
Steps:

1. Create a gamut mask with name and description data. Save.
2. Ensure gamut mask docker is in list mode so you can see the description.
3. Edit the gamut mask you just made, change it's description, and and also the mask itself. Save.
4. Look at the result in the gamut mask docker.

Result:
Gamut mask docker will show updated preview, but not updated description.

Expected:
Both preview and description are updated.

 Version: 5.0.0-beta5 (git 6749d05)
Comment 1 wolthera 2021-12-17 13:07:35 UTC
Git commit 0490815870d35d9aa035ee540601f23420870d95 by Wolthera van Hövell.
Committed on 17/12/2021 at 13:07.
Pushed by woltherav into branch 'krita/5.0'.

Add meta-data updating to the update resource function.

M  +5    -0    libs/resources/KisResourceLocator.cpp

https://invent.kde.org/graphics/krita/commit/0490815870d35d9aa035ee540601f23420870d95
Comment 2 wolthera 2021-12-17 13:07:59 UTC
Git commit 9c5dbaad9071332e5b9f4c5094b6b643e53cb01a by Wolthera van Hövell.
Committed on 17/12/2021 at 13:07.
Pushed by woltherav into branch 'master'.

Add meta-data updating to the update resource function.


(cherry picked from commit 0490815870d35d9aa035ee540601f23420870d95)

M  +5    -0    libs/resources/KisResourceLocator.cpp

https://invent.kde.org/graphics/krita/commit/9c5dbaad9071332e5b9f4c5094b6b643e53cb01a