Add meta-data updating to the update resource function.

BUG:446686


(cherry picked from commit 0490815870d35d9aa035ee540601f23420870d95)