libs/resources/KisResourceLocator.cpp
@@ -691,6 +691,11 @@ bool KisResourceLocator::updateResource(const QString &resourceType, const KoRes
         return false;
     }
 
+    if (!setMetaDataForResource(resource->resourceId(), resource->metadata())) {
+        qWarning() << "Failed to update resource metadata" << resource;
+        return false;
+    }
+
     // Update the resource in the cache
     QPair<QString, QString> key = QPair<QString, QString> (storageLocation, resourceType + "/" + resource->filename());
     d->resourceCache[key] = resource;
